changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

CRE: export attacktype to scripting.
Nicolas Weeger 2010-04-18

CRE: display items count, and if filtered total count.
Nicolas Weeger 2010-04-18

Fix unit test for accounts when tmp files are still around.
Nicolas Weeger 2010-04-18

Fix invalid attack roll handling in easy cases.
Nicolas Weeger 2010-04-18

CRE: export some properties for formulae.
Nicolas Weeger 2010-04-18

CRE: set a better progress caption.
Nicolas Weeger 2010-04-17

CRE: show report generation progress, enable cancelling.
Nicolas Weeger 2010-04-17

CRE: button to copy report contents to clipboard.
Nicolas Weeger 2010-04-17

CRE: expose maps to report interfaces.
Nicolas Weeger 2010-04-17

CRE: keep map level while we're at it.
Nicolas Weeger 2010-04-17

CRE: expand maps node if only maps, resize columns to meaningful size.
Nicolas Weeger 2010-04-17

CRE: display an empty panel by default, to force a decent size.
Nicolas Weeger 2010-04-17

CRE: display item property in treasure panel.
Nicolas Weeger 2010-04-16

CRE: report definition is now managed like filters.
Add quick item filter.
Nicolas Weeger 2010-04-16

CRE: wrap object name and experience.
Nicolas Weeger 2010-04-16

CRE: change disposition for resource window.
Nicolas Weeger 2010-04-15

CRE: display region information when one is selected.
Nicolas Weeger 2010-04-15

CRE: experience display.
Nicolas Weeger 2010-04-15

CRE: load data in the thread, no need to freeze everything.
Nicolas Weeger 2010-04-14

CRE: display map name, and exits to and from.
Nicolas Weeger 2010-04-14

CRE improvements. Keep region information for maps.