@@ -14,7 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
-CRE: export attacktype to scripting.
+CRE: export attack types values to scripting.
+Nicolas Weeger 2010-04-18
+
+CRE: export object's attacktype to scripting.
 Nicolas Weeger 2010-04-18
 
 CRE: display items count, and if filtered total count.
